# hadr-starter

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  QUESTIONS.md  README.md  REQS.md  dashboard.html  goal.md  implementation-notes.md  index.html  prd.html  pyproject.toml  system-view.html
.github/workflows/: checks.yml
deploy/: README.md
deploy/systemd/: hadr-dashboard.service  hadr-dashboard.timer  hadr-monitor.service  hadr-web.service
docs/: PRD.html
docs/adr/: 0001-impact-based-trigger-policy.md  0002-hazard-scope.md  0003-update-and-renotification-semantics.md  0004-dedup-canonical-events.md  0005-polling-cadence.md  0006-persistence-sqlite-raw-archive.md  0007-single-user-telegram-delivery.md  0008-python-on-always-on-server.md  0009-cold-start-backfill.md  0010-feed-health-staleness-alerts.md  0011-reliefweb-feature-flag.md  0012-vertical-slice-and-replay-testing.md  0013-web-app-pull-delivery.md  0014-reliefweb-rss-now-api-later.md
hadr/: __init__.py  archive.py  config.py  dedup.py  models.py  notify.py  pipeline.py  run.py  store.py  triggers.py  web.py
hadr/feeds/: __init__.py  gdacs.py  reliefweb.py  usgs.py
scripts/: check.sh
skills/sitrep/: SKILL.md  query.py
tests/: conftest.py  test_cross_source.py  test_gdacs_parse.py  test_pipeline.py  test_reliefweb.py  test_usgs_parse.py  test_web.py
